--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
             <img class="img-busca" src="https://www.svgrepo.com/show/488200/find.svg" alt="Busca">
         </button>
         <div class="caixa-media">
-            <h2 class="cidade">Tempo em São Paulo</h2>
-            <p class="temp">21°C</p>
+            <h2 class="cidade">Tempo em </h2>
+            <p class="temp">°C</p>
+            <div class="temp_min_max">
+                <p class="temp_min">Min</p>
+                <p class="temp_max">Max</p>
+            </div>
             <div class="caixa-menor">
                 <img class="img-previsao" src="https://openweathermap.org/img/wn/04n.png" alt="Icone-do-tempo">
-                <p class="texto-previsao">Nublado</p>
+                <p class="texto-previsao"></p>
             </div>
-            <p class="umidade">Umidade: 76%</p>
+            <p class="umidade">Umidade:</p>
         </div>
     </div>
 
